--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -3,11 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>automation-prototype</artifactId>
+    <artifactId>automation-domain</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.seanshubin.automation</groupId>
-            <artifactId>automation-domain</artifactId>
+            <artifactId>automation-ssh</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.seanshubin.automation</groupId>
+            <artifactId>automation-string</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
